[js] 게임 방법 점수 기준 완성

--- a/index.html
+++ b/index.html
@@ -375,6 +375,95 @@
                     </div>
                     <div class="howToPlayframe" id="page3" style="display: none;">
                         <div class="modal_title sub_title wordForWord" id="scoringInfo">— SCORE VALUES —</div>
+                            <div id="score_tables">
+                                <table class="score_values wordForWord" id="score_table1">
+                                    <thead>
+                                        <tr>
+                                            <th class="wordForWord" id="score_action1">ACTION</th>
+                                            <th class="wordForWord" id="score_points1">POINTS</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td class="wordForWord" id="action_softDrop">Soft Drop</td>
+                                            <td class="wordForWord" id="points_softDrop">1 × cells</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="wordForWord" id="action_hardDrop">Hard Drop</td>
+                                            <td class="wordForWord" id="points_hardDrop">2 × cells</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="wordForWord" id="action_single">Single</td>
+                                            <td class="wordForWord" id="points_single">100 × level</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="wordForWord" id="action_double">Double</td>
+                                            <td class="wordForWord" id="points_double">300 × level</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="wordForWord" id="action_triple">Triple</td>
+                                            <td class="wordForWord" id="points_triple">500 × level</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="wordForWord" id="action_tetris">Tetris</td>
+                                            <td class="wordForWord" id="points_tetris">800 × level</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="wordForWord" id="action_tSpin">T‐Spin</td>
+                                            <td class="wordForWord" id="points_tSpin">400 × level</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="wordForWord" id="action_tSpinSingle">T‐Spin Single</td>
+                                            <td class="wordForWord" id="points_tSpinSingle">800 × level</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="wordForWord" id="action_tSpinDouble">T‐Spin Double</td>
+                                            <td class="wordForWord" id="points_tSpinDouble">1,200 × level</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="wordForWord" id="action_tSpinTriple">T‐Spin Triple</td>
+                                            <td class="wordForWord" id="points_tSpinTriple">1,600 × level</td>
+                                        </tr>
+                                    </tbody>
+                                    <table class="score_values wordForWord" id="score_table2" >
+                                        <thead>
+                                            <tr>
+                                                <th class="wordForWord" id="score_action2">ACTION</th>
+                                                <th class="wordForWord" id="score_points2">POINTS</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td class="wordForWord" id="action_backtoback">Back‐to‐Back</td>
+                                                <td class="wordForWord" id="points_backtoback">1.5 × Tetris or T‐Spin</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="wordForWord" id="action_combo">Combo</td>
+                                                <td class="wordForWord" id="points_combo">50 × combo count × level</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="wordForWord" id="action_singlePC">Single&NewLine;Perfect Clear</td>
+                                                <td class="wordForWord" id="points_singlePC">800 × level</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="wordForWord" id="action_doublePC">Double&NewLine;Perfect Clear</td>
+                                                <td class="wordForWord" id="points_doublePC">1,200 × level</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="wordForWord" id="action_triplePC">Triple&NewLine;Perfect Clear</td>
+                                                <td class="wordForWord" id="points_triplePC">1,600 × level</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="wordForWord" id="action_tetrisPC">Tetris&NewLine;Perfect Clear</td>
+                                                <td class="wordForWord" id="points_tetrisPC">2,000 × level</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="wordForWord" id="action_BTBTetrisPC">Back‐to‐Back&NewLine;Tetris&NewLine;Perfect Clear</td>
+                                                <td class="wordForWord" id="points_BTBTetrisPC">3,200 × level</td>
+                                            </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                     </div>
                     <div class="button_background" id="howtoplay_button_background">
                         <span>◀</span><span>▶</span>
