[js] 점수 애니메이션 한글화 完

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </div>
-        <div class="layer" id="textLayer"></div>
+        <div class="layer wordForWord" id="textLayer"></div>
         <div class="modal" id="pauseModal">
             <div class="modal_window of_pause">
                 <div>
