[js] 순위표 말풍선 完

--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
             <div class="item" id="levelSection">
                 <p class="title wordForWord" id="level_in_game">LEVEL</p>
                 <div class="blackBox wordForWord" id="levelBox">
-                    <p class="content"></p>
+                    <p class="content wordForWord" id="level_now"></p>
                 </div>
             </div>
             <div class="item" id="scoreSection">
                 <p class="title wordForWord" id="score_in_game">SCORE</p>
                 <div class="blackBox wordForWord" id="scoreBox">
-                    <p class="content"></p>
+                    <p class="content wordForWord" id="score_now"></p>
                 </div>
             </div>
             <div class="item" id="linesSection">
                 <p class="title wordForWord" id="lines_in_game">LINES</p>
                 <div class="blackBox wordForWord" id="lineBox">
-                    <p class="content"></p>
+                    <p class="content wordForWord" id="lines_now"></p>
                 </div>
             </div>
             <div class="item" id="pauseSection">
@@ -179,6 +179,7 @@
                         </tbody>
                     </table>
                     <a href="#" class="modal_button scoreOK"><span class="wordForWord" id="scoreOk">OK</span></a>
+                    <div class="detail_bubble">버블버블버</div>
                 </div>
             </div>
         </div>
