[js] 폰트 로드 기능 및 게임 로딩 화면 完

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="./js/home.js" type="module"></script>
 </head>
 <body>
-    <div id="home">
+    <div id="home" style="visibility: hidden;">
         <div id="home_logo">
             <div id="upperBorderBox"></div>
             <div id="lowerBorderBox"></div>
@@ -180,7 +180,6 @@
                         </tbody>
                     </table>
                     <a href="#" class="modal_button scoreOK"><span class="wordForWord" id="scoreOk">OK</span></a>
-                    <div class="detail_bubble">버블버블버</div>
                 </div>
             </div>
         </div>
