[js] 배경 음악 재생 속도 함수 完

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                     <div id="nextBuffer"></div>
                 </div>
                 <div id="musicBox">
-                    <a href="#" id="prevMusic">◀</a>
+                    <a href="#" id="prevMusic"></a>
                     <div id="nowPlaying">
                         <span id="bgm_title"></span>
                     </div>
-                    <a href="#" id="prevMusic">▶</a>
+                    <a href="#" id="nextMusic"></a>
                 </div>
             </div>
         </div>
