[css] 배경 음악 애니메이션

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div id="musicBox">
                     <a href="#" id="prevMusic"></a>
                     <div id="nowPlaying">
-                        <span id="bgm_title"></span>
+                        <div><span id="bgm_title"></span></div>
                     </div>
                     <a href="#" id="nextMusic"></a>
                 </div>
