[js] 배경음 표시 完, 유틸리티 함수 리팩토링 中

--- a/index.html
+++ b/index.html
@@ -100,11 +100,14 @@
                     <div id="nextBuffer"></div>
                 </div>
                 <div id="musicBox">
-                    <a href="#" id="prevMusic"></a>
-                    <div id="nowPlaying">
-                        <div><span id="bgm_title"></span></div>
+                    <div class="wordForWord" id="bgm_bgm">BGM ♬</div>
+                    <div id="bgm_content">
+                        <a href="#" id="prevMusic"></a>
+                        <div id="nowPlaying">
+                            <span class="wordForWord" id="bgm_title"></span>
+                        </div>
+                        <a href="#" id="nextMusic"></a>
                     </div>
-                    <a href="#" id="nextMusic"></a>
                 </div>
             </div>
         </div>
