[css] 세로 반응형 구현

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="./css/modal.css" rel="stylesheet">
     <link href="./css/howtoplay.css" rel="stylesheet">
     <link href="./css/font.css" rel="stylesheet">
+    <link href="./css/media.css" rel="stylesheet">
     <script src="./js/home.js" type="module"></script>
 </head>
 <body>
